# Aquila

./: README.md
Aquila/: .gitignore  CMakeLists.txt  README.md  report.xml  sdkconfig  sdkconfig.old
Aquila/components/: CMakeLists.txt  FL3195.c  HMC5983.c  HMC5983.h  INA219.c  INA219.h  IST8310.c  IST8310.h  MCP23017.c  MPU6000.c  MPU6000.h  MS5611.c  MS5611.h  PCA9685.c  PMW3901.c  PMW3901.h  TfminiS.c  TfminiS.h  VL53L1x.c  VL53L1x.h  filters.c  filters.h  garbage.c  madgwick.c  madgwick.h  mavlink_crc.c  mavlink_wt.h  pid.c  q_operations.c  q_operations.h  ve_alldef.h  ve_i2c.c  ve_i2c.h  ve_spi.c  ve_spi.h  winbondW25N.c  winbondW25N.h  wt_alldef.h  wt_i2c.c  wt_i2c.h  (+2 more)
Aquila/components/general_components/: CMakeLists.txt  FusionAhrs.c  FusionBias.c  HMC5983.c  INA219.c  IST8310.c  MCP23017.c  MPU6000.c  MS5611.c  NVS_operations.c  TfminiS.c  VL53L1x.c  advanced_math.c  dshot_esc_encoder.c  filters.c  garbage.c  gpio_ops.c  madgwick.c  mavlink_wt.c  pid.c  px4flow.c  q_operations.c  timers_ops.c  timing.c  winbondW25N.c
Aquila/components/general_components/ESP_operations/: CMakeLists.txt  NVS_operations.c  NVS_operations.h  gpio_operations.c  gpio_operations.h  logging_operations.c  logging_operations.h  timers_operations.c  timers_operations.h
Aquila/components/general_components/IMUs/ICM45686/: CMakeLists.txt  ICM45686.c  ICM45686.h
Aquila/components/general_components/IMUs/MPU6000/: CMakeLists.txt  MPU6000.c  MPU6000.h
Aquila/components/general_components/IOs/MCP23017/: CMakeLists.txt  MCP23017.c  MCP23017.h
Aquila/components/general_components/IOs/PCA9685/: CMakeLists.txt  PCA9685.h
Aquila/components/general_components/LEDs/FL3195/: CMakeLists.txt  FL3195.c  FL3195.h
Aquila/components/general_components/ahrs_algorithms/: CMakeLists.txt  ahrs_provider.c  ahrs_provider.h
Aquila/components/general_components/ahrs_algorithms/Madgwick/: CMakeLists.txt  madgwick.h
Aquila/components/general_components/ahrs_algorithms/fusion/: CMakeLists.txt  FusionBias.h  FusionCompass.c  FusionMath.h  FusionRemap.h
Aquila/components/general_components/ahrs_algorithms/vqf/: CMakeLists.txt  vqf.c
Aquila/components/general_components/baros/MS5611/: CMakeLists.txt  MS5611.c  MS5611.h
Aquila/components/general_components/compass/HMC5983/: CMakeLists.txt  HMC5983.h
Aquila/components/general_components/compass/IST8310/: CMakeLists.txt  IST8310.c  IST8310.h
Aquila/components/general_components/esc_control/: CMakeLists.txt  esc_control_provider.c  esc_control_provider.h
Aquila/components/general_components/esc_control/dshot/: CMakeLists.txt  dshot.c  dshot.h  dshot_esc_encoder.c  dshot_esc_encoder.h
Aquila/components/general_components/esc_control/pwm/: CMakeLists.txt  pwm.c  pwm.h
Aquila/components/general_components/flash_memory/winbondW25N/: CMakeLists.txt  winbondW25N.c
Aquila/components/general_components/include/: CRCs.h  FL3195.h  FusionAhrs.h  FusionCompass.h  FusionModel.h  IST8310.h  MCP23017.h  MPU6000.h  MS5611.h  NVS_operations.h  PCA9685.h  PX4Flow.h  advanced_math.h  dshot_esc_encoder.h  filters.h  mavlink_crc.h  mavlink_wt.h  pid.h  q_operations.h  timers_ops.h  timing.h  winbondW25N.h
Aquila/components/general_components/lidars/TfminiS/: CMakeLists.txt  TfminiS.h
Aquila/components/general_components/lidars/VL53L1x/: CMakeLists.txt
Aquila/components/general_components/math_operations/: AES_crypto.c  AES_crypto.h  CMakeLists.txt  CRCs.c  CRCs.h  advanced_math.c  advanced_math.h  fft_aux.c  fft_aux.h  filters.c  filters.h  q_operations.c  q_operations.h
Aquila/components/general_components/mavlink/: CMakeLists.txt
Aquila/components/general_components/optical_flow/PMW3901/: CMakeLists.txt  PMW3901.c
Aquila/components/general_components/optical_flow/px4flow/: CMakeLists.txt  px4flow.h
Aquila/components/general_components/pid/: CMakeLists.txt  pid.c  pid.h
Aquila/components/general_components/power_monitors/INA219/: CMakeLists.txt  INA219.h
Aquila/components/service_tasks/: CMakeLists.txt  advanced_acc_calibration.c  advanced_mag_calibration.c  clearing_NVS.c  engines_test.c  gyro_calibration.c  imu_calibration.c  printing_calibration_coefficients.c  reading_logs_from_external_flash.c
Aquila/components/service_tasks/include/: advanced_acc_calibration.h  advanced_mag_calibration.h  clearing_NVS.h  engines_test.h  gyro_calibration.h  imu_calibration.h  printing_calibration_coefficients.h  reading_logs_from_external_flash.h
Aquila/components/tasks/: CMakeLists.txt  INA219_read_and_process_data.c  MCP23017_monitoring_and_control.c  MS5611_read_and_process.c  PCA9685_control.c  RC_emulation.c  RC_read_and_process_data.c  blinking_flight_lights.c  configuration_mode.c  configuration_mode_telnet.c  emergency_mode.c  error_code_LED_blinking.c  fft.c  gps_read_and_process_data.c  init.c  lidar_read_and_process_data.c  mag_read_and_process_data.c  main_flying_cycle.c  performance_monitor.c  px4flow_read_and_process_data.c  send_data_to_RC.c  send_telemetry_via_MSP.c  send_telemetry_via_MSP___.c  send_telemetry_via_mavlink.c  sending_something_over_wifi.c  writing_logs_to_flash.c
Aquila/components/tasks/include/: INA219_read_and_process_data.h  MCP23017_monitoring_and_control.h  MS5611_read_and_process.h  PCA9685_control.h  RC_emulation.h  RC_read_and_process_data.h  blinking_flight_lights.h  configuration_mode.h  configuration_mode_telnet.h  emergency_mode.h  error_code_LED_blinking.h  fft.h  gps_read_and_process_data.h  init.h  lidar_read_and_process_data.h  mag_read_and_process_data.h  main_flying_cycle.h  performance_monitor.h  px4flow_read_and_process_data.h  send_data_to_RC.h  send_telemetry_via_MSP.h  send_telemetry_via_mavlink.h  sending_something_over_wifi.h  writing_logs_to_flash.h
Aquila/components/wt_libs/: CMakeLists.txt  wt_i2c.c  wt_spi.c
Aquila/components/wt_libs/include/: wt_alldef.h  wt_alldef.h.dump  wt_i2c.h  wt_spi.h
Aquila/main/: CMakeLists.txt  idf_component.yml  main.c  ~todos.h
