idf_component_register(SRCS 
"wt_i2c.c"
"wt_spi.c"
#"VL53L1x.c"
"winbondW25N.c"
"madgwick.c"
"HMC5983.c"
"MPU6000.c"
#"PMW3901.c"
"MCP23017.c"
"PCA9685.c"
#"TfminiS.c"
"INA219.c"
"IST8310.c"
"FL3195.c"
"MS5611.c"
"AES_crypto.c"

INCLUDE_DIRS "." "C:/Users/VVE/esp/v5.2/esp-idf/components/driver/i2c/include/" "C:/Users/VVE/esp/v5.2/esp-idf/components/driver/spi/include/"
"C:/Users/VVE/esp/v5.2/esp-idf/components/driver/gpio/include/" "C:/Users/VVE/esp/v5.2/esp-idf/components/driver/uart/include/"
"C:/Users/VVE/esp/v5.2/esp-idf/components/mbedtls/mbedtls/include/"
REQUIRES mbedtls)
