idf_component_register(SRCS 
"wt_i2c.c"
"wt_spi.c"
#"VL53L1x.c"
"winbondW25N.c"
"madgwick.c"
"HMC5983.c"
"MPU6000.c"
#"PMW3901.c"
"MCP23017.c"
"PCA9685.c"
"TfminiS.c"
"INA219.c"
"IST8310.c"
"FL3195.c"
"MS5611.c"
"AES_crypto.c"
"filters.c"
"q_operations.c"
"mavlink_crc.c"
"mavlink_wt.c"

INCLUDE_DIRS "." "C:/Users/VVE/esp/v5.4/esp-idf/components/"
"C:/Users/VVE/esp/v5.4/esp-idf/components/esp_driver_spi/include/driver/"
"C:/Users/VVE/esp/v5.4/esp-idf/components/esp_driver_i2c/include/driver/"
REQUIRES mbedtls)
